tests/negative/test_call_func_type_not_found.orb
fnc foo (x:i32) () {};
fnc foo (x:f32) () {};

fnc main () () {
    foo:(fnc (x:u32) ()) 100;
};